bug fix collection name too long will break the UI, fix fullname display

--- a/src/components/HeaderDropdown/index.less
+++ b/src/components/HeaderDropdown/index.less
@@ -31,8 +31,9 @@
   .item {
     display: flex;
     align-items: center;
-    height: 40px;
+    min-height: 40px;
     padding: 0 12px;
+    text-transform: capitalize;
     cursor: pointer;
     .icon {
       display: flex;
